<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/login"
            android:icon="@drawable/ic_baseline_lock_24"/>
        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/ic_baseline_share_24"
            />
        <item
            android:id="@+id/nav_rate"
            android:title="@string/rate"
            android:icon="@drawable/ic_baseline_stars_24"
            />

    </group>


       <!--<item android:title="@string/profile">
            <menu>
                <group>
                <item
                    android:id="@+id/nav_login"
                    android:tit"@string/login" />
                </group>
            </menu>

        </item>

    <item android:title="Communicate">
        <menu>

        </menu>

    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
-->
</menu>