<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Dashboard"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/scrollview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar"
                    android:background="#00FFFFFF" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/bgcolor"
                    android:contentDescription="@string/todo"
                    />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/menubtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:navigationIcon="@drawable/ic_baseline_menu_24" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/imageView2"
                    android:layout_marginBottom="100dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/dash_icons"
                            android:gravity="center"
                            android:text="@string/details"
                            android:onClick="bot_profile"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/result"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/dash_icons"
                            android:gravity="center"
                            android:text="@string/result"
                            android:onClick="Result"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/dash_icons"
                            android:gravity="center"
                            android:text="@string/assignment"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/dash_icons"
                            android:gravity="center"
                            android:text="@string/fees"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/dash_icons"
                            android:gravity="center"
                            android:text="@string/time_table"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"

                            android:gravity="center"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <!--<LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@drawable/dash_icons"
                            android:layout_margin="10dp"
                            android:text="@string/attendance"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/dash_icons"
                            android:gravity="center"
                            android:text="@string/time_table"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@drawable/dash_icons"
                            android:layout_margin="10dp"
                            android:textSize="18sp"
                            android:text="@string/notes" />
                    </LinearLayout> -->
                </LinearLayout>


            </RelativeLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/scrollview1"


            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="204dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/dash_bottom_icons"
            android:gravity="center"
            android:onClick="bot_home"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bot_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/ic_baseline_home_24"
                android:contentDescription="@string/home_icon" />

            <ImageButton
                android:id="@+id/bot_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/profile_icon"
                android:onClick="bot_profile" />

            <ImageButton

                android:id="@+id/bot_notifications"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/notification_icon2_foreground"
                android:contentDescription="@string/notification_icon"
                android:onClick="bot_notifications" />

            <ImageButton

                android:id="@+id/bot_settings"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/setting_icon2_foreground"
                android:contentDescription="@string/settings_icon"
                android:onClick="bot_settings" />
        </LinearLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>