<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_radius"
        android:hint="@string/username"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:paddingStart="30dp"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_radius"
        android:hint="@string/password"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Forgot password"
        android:textColor="@color/black"
        android:onClick="toForgotPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"

        android:background="@drawable/border_radius"
        android:text="@string/loginbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_upbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/sign_upbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_radius"
        android:onClick="signupfunc"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.517" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/black" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="50dp"

        <android.support.design.widget.TextInputEditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/login_contact_no"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="20dp"

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/user_name" />

    </android.support.design.widget.TextInputLayout>


<Button
android:id="@+id/submit"
android:layout_width="match_parent"
android:layout_height="44dp"
android:layout_marginTop="150dp"
android:background="@drawable/button"
android:text="@string/forgot_password" />
</LinearLayout>-->
